# PolySeg

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  PolySegConfig.cmake.in  PolySegConfigure.h.in  vtkBinaryLabelmapToClosedSurfaceConversionRule.cxx  vtkBinaryLabelmapToClosedSurfaceConversionRule.h  vtkCalculateOversamplingFactor.cxx  vtkCalculateOversamplingFactor.h  vtkClosedSurfaceToBinaryLabelmapConversionRule.cxx  vtkClosedSurfaceToBinaryLabelmapConversionRule.h  vtkClosedSurfaceToFractionalLabelmapConversionRule.cxx  vtkClosedSurfaceToFractionalLabelmapConversionRule.h  vtkFractionalLabelmapToClosedSurfaceConversionRule.cxx  vtkFractionalLabelmapToClosedSurfaceConversionRule.h  vtkOrientedImageData.cxx  vtkOrientedImageData.h  vtkOrientedImageDataResample.cxx  vtkOrientedImageDataResample.h  vtkPolyDataToFractionalLabelmapFilter.cxx  vtkPolyDataToFractionalLabelmapFilter.h  vtkSegment.cxx  vtkSegment.h  vtkSegmentation.cxx  vtkSegmentation.h  vtkSegmentationConverter.cxx  vtkSegmentationConverter.h  vtkSegmentationConverterFactory.cxx  vtkSegmentationConverterFactory.h  vtkSegmentationConverterRule.cxx  vtkSegmentationConverterRule.h  vtkSegmentationHistory.cxx  vtkSegmentationHistory.h  vtkTopologicalHierarchy.cxx  vtkTopologicalHierarchy.h
src/Testing/: CMakeLists.txt  vtkSegmentationConverterTest1.cxx  vtkSegmentationTest1.cxx
web/: Dockerfile  README.md
web/Docker/: Dockerfile  ITKBridgeJavaScript.cmake
web/binaryLabelmapToClosedSurface/: CMakeLists.txt  PolySegConfigure.h  binaryLabelmapToClosedSurface.cxx  index.html  index.js  package-lock.json  package.json  vtkBinaryLabelmapToClosedSurfaceConversionRule.h  vtkCalculateOversamplingFactor.cxx  vtkCalculateOversamplingFactor.h  vtkClosedSurfaceToFractionalLabelmapConversionRule.cxx  vtkClosedSurfaceToFractionalLabelmapConversionRule.h  vtkFractionalLabelmapToClosedSurfaceConversionRule.cxx  vtkFractionalLabelmapToClosedSurfaceConversionRule.h  vtkOrientedImageDataResample.h  vtkSegmentation.cxx  vtkTopologicalHierarchy.h
web/binaryLabelmapToClosedSurface/example/: package-lock.json  package.json  webpack.config.js
web/binaryLabelmapToClosedSurface/example/src/: index.js  itkConfig.js
web/helloPolySeg/: CMakeLists.txt  helloPolySeg.cxx  vtkBinaryLabelmapToClosedSurfaceConversionRule.cxx  vtkClosedSurfaceToBinaryLabelmapConversionRule.cxx  vtkClosedSurfaceToBinaryLabelmapConversionRule.h  vtkOrientedImageData.cxx  vtkOrientedImageData.h  vtkOrientedImageDataResample.cxx  vtkPolyDataToFractionalLabelmapFilter.cxx  vtkPolyDataToFractionalLabelmapFilter.h  vtkSegment.cxx  vtkSegment.h  vtkSegmentation.h  vtkSegmentationConverter.h  vtkSegmentationConverterFactory.cxx  vtkSegmentationConverterRule.cxx  vtkSegmentationConverterRule.h  vtkSegmentationHistory.cxx  vtkSegmentationHistory.h  vtkTopologicalHierarchy.cxx
